--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -3,10 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="banner">
+        <h1 class="title__banner"> This website is a side project. We wanted to crawl some data about luxury watches, such as price, name and brand.</h1>
+    </div>
+    <div class="body">
+        <div class="text__button">Select the crawled website you desire</div>
+        <button class="button" onclick="location.href='chronext'" type="button">
+            Chronext
+        </button>
+        <button class="button" onclick="location.href='omega'" type="button">
+            Omega
+        </button>
+        <button class="button both" onclick="location.href='both'" type="button">
+            Chronext ᐩ Omega
+        </button>
+    </div>
+
+    <footer>
+        <p class="text__footer">Developed by : <a href="https://ytrack.learn.ynov.com/git/lanael" target="_blank">LASSERRE Anaël</a>, <a href="https://ytrack.learn.ynov.com/git/ladan" target="_blank">LALDY-MAQUIHA Adan</a>, <a href="https://ytrack.learn.ynov.com/git/dflorent" target="_blank">Florent Detres</a>.</p>
+        <p class="text_footer2">Only in 4 days.</p>
+    </footer>
 </body>
 </html>
