--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="banner">
-        <h1 class="title__banner"> This website is a side project. We wanted to crawl some data about luxury watches, such as price, name and brand.</h1>
+        <h1 class="title__banner"><span style="color:#00561b; font-size: 3.6vw;">/ </span>This website is a side project. We wanted to crawl some data about <span style="color:#00561b;">luxury</span> watches, such as price, name and brand.</h1>
     </div>
     <div class="body">
         <div class="text__button">Select the crawled website you desire</div>
