--- a/assets/html/404.html
+++ b/assets/html/404.html
@@ -6,26 +6,32 @@
     <link rel="stylesheet" href="style.css">
     <title>404</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: sans-serif;
+            font-family: 'Poppins', sans-serif;
+            background-color: #F9F9F9;
+        }
+        a, a:visited{
+            color: #333;
         }
         .error{
-            font-size: 42vw;
+            font-size: 30vw;
+            font-weight: 900;
             text-align: center;
         }
         .errorpage{
             font-size: 2vw;
             text-align: center;
             text-transform: uppercase;
-            margin-bottom: 5vw;
+            margin-bottom: 2vw;
         }
     </style>
 </head>
 <body>
     <h1 class="error">404</h1>
-    <p class="errorpage">Le site n'est pas accessible. Il semble y avoir une erreur.</p>
+    <p class="errorpage">This page is not available. Go back to <a href="/">home page</a> ↗</p>
 </body>
 </html>
