--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <footer>
-        <p class="text__footer">Developed by&emsp; <a href="https://ytrack.learn.ynov.com/git/lanael" target="_blank">LASSERRE Anaël&emsp;</a><a href="https://ytrack.learn.ynov.com/git/ladan" target="_blank">LALDY-MAQUIHA Adan&emsp;</a><a href="https://ytrack.learn.ynov.com/git/dflorent" target="_blank">DETRES Florent</a></p>
+        <p class="text__footer"> 💻 Developed by&emsp; <a href="https://ytrack.learn.ynov.com/git/lanael" target="_blank">LASSERRE Anaël&emsp;</a><a href="https://ytrack.learn.ynov.com/git/ladan" target="_blank">LALDY-MAQUIHA Adan&emsp;</a><a href="https://ytrack.learn.ynov.com/git/dflorent" target="_blank">DETRES Florent</a></p>
         <p class="text_footer2">Made in 4 days</p>
     </footer>
 </body>
